k8s/workload/user-service/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: user-service-envoy
spec:
  clusterIP: None
  ports:
    - port: 9001
      protocol: TCP
      targetPort: 9001
  selector:
    app: user-service
